--- a/Advanced-CSS/index.html
+++ b/Advanced-CSS/index.html
@@ -107,9 +107,24 @@
             <p class="directions">Create a Responsive CSS image Gallery from
                 the images below
             </p>
-            <img src="https://placedog.net/200" alt="dog">
-            <img src="https://placedog.net/200" alt="dog">
-            <img src="https://placedog.net/200" alt="dog">
+            <div class="gallery">
+            <a target="_blank" href="https://placedog.net/200">
+                <img src="https://placedog.net/200" alt="dog">
+            </a>
+                <div class="desc">This is a cute dog</div>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="https://placedog.net/200">
+                    <img src="https://placedog.net/200" alt="dog">
+                </a>
+                    <div class="desc">This is a cute dog</div>
+            </div>
+            <div class="gallery">
+                <a target="_blank" href="https://placedog.net/200">
+                    <img src="https://placedog.net/200" alt="dog">
+                </a>
+                    <div class="desc">This is a cute dog</div>
+            </div>
         </article>
 
     </div>
